Not assume that '_collInfo' is initialized when we hit an error at '_runImpl' from 'collmod_coordinator.cpp'

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Fully Compatible
    • ALL
    • Sharding EMEA 2022-11-28, Sharding EMEA 2022-12-12
    • 120
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      We should not assume that 'collInfo' is initialized when we hit 'onError' at method 'runImpl' from 'collmod_coordinator.cpp'.

      To fix this bug I propose to one of the two solutions:

      • Check if 'collInfo' is initialized before entering to 'resumeMigrations' inside 'onError'.
      • Get the 'nsForTargeting' locally:
        • nsForTargeting = info.timeSeriesOptions ? originalNss().makeTimeseriesBucketsNamespace() : originalNss()

            Assignee:
            Enrico Golfieri
            Reporter:
            Pol Pinol
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: