SERVER-71277 Not assume that '_collInfo' is initialized when we hit an error at '_runImpl' from 'collmod_coordinator.cpp'